--- a/01_src/z_markgo/Dockerfile
+++ b/01_src/z_markgo/Dockerfile
@@ -14,7 +14,7 @@ EXPOSE 5000
 ARG INCLUDE_POSTGRESQL=false
 ARG INCLUDE_UWSGI=false
 RUN echo 'https://mirrors.aliyun.com/alpine/v3.9/main/' >/etc/apk/repositories && echo 'https://mirrors.aliyun.com/alpine/v3.9/community/' >>/etc/apk/repositories &&  \
-    apk add --no-cache --virtual=.build_dependencies musl-dev  gcc python3-dev  py3-cffi libevent-dev linux-headers  openssl-dev libxslt libxslt-dev ffmpeg && \
+    apk add --no-cache --virtual=.build_dependencies musl-dev  gcc python3-dev  py3-cffi libevent-dev linux-headers  openssl-dev libxslt libxslt-dev yasm ffmpeg && \
     apk --no-cache add tzdata   libffi-dev && \
     ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&  \
     echo "Asia/Shanghai" >/etc/timezone  &&  \
