--- a/01_src/z_markgo/requirements.txt
+++ b/01_src/z_markgo/requirements.txt
@@ -3,7 +3,7 @@ Flask==1.0.2
 SQLAlchemy==1.2.18
 Flask_SQLAlchemy==2.3.2
 Flask_APScheduler==1.11.0
-Authlib>=0.11
+Authlib==0.11
 PyMySQL==0.9.3
 requests==2.20.1
 requests_toolbelt==0.8.0
