--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-Flask~=1.1.1
-SQLAlchemy~=1.3.13
-Flask_SQLAlchemy~=2.4.1
+-r frame/requirements.txt
+
 Authlib~=0.14.1
-PyMySQL~=0.9.3
-requests~=2.23.0
-sqlalchemy_utils~=0.36.1
-psutil~=5.7.0
-rsa~=4.0
-psycopg2~=2.8.4
