--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "frame"]
 	path = frame
-	url = git@gitee.com:whcsdtc/flask_rest_frame.git
+	url = https://gitee.com/whcsdtc/flask_rest_frame.git
