增加接口检测

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
         "CHECK_PASSWORD": "False",
         "PROXY_SERVER_URL": "http://192.168.100.152:36023",
         "SQLALCHEMY_DATABASE_URI": "postgresql://postgres:dataknown1234@192.168.100.152:36021/dataknown",
-        "REDIS_URL": "redis://:dataknown1234@192.168.100.152:36061"
+        "REDIS_URL": "redis://:dataknown1234@192.168.100.152:36061",
+        "CHECK_API": "True"
       }
     }
   ]
