--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,21 @@
         "REDIS_URL": "redis://:dataknown1234@192.168.100.152:36061",
         "CHECK_API": "True"
       }
+    },
+    {
+      "name": "test_150",
+      "type": "python",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "program": "run.py",
+      "env": {
+        "RUN_PORT": "34502",
+        "FLASK_CONFIG": "testing",
+        "PROXY_SERVER_URL": "http://192.168.100.150:31102",
+        "SQLALCHEMY_DATABASE_URI": "postgresql://dataknown:7F8rouXrhvsibr@192.168.100.150:33314/dataknown",
+        "REDIS_URL": "redis://:dataknown1234@192.168.100.150:31063",
+        "CHECK_API": "True"
+      }
     }
   ]
 }
