--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "dev_34",
+      "name": "dev_local",
       "type": "python",
       "request": "launch",
       "cwd": "${workspaceFolder}",
@@ -11,26 +11,12 @@
         "RUN_PORT": "34502",
         "FLASK_CONFIG": "development",
         "CHECK_PASSWORD": "False",
-        "PROXY_SERVER_URL": "http://192.168.100.152:36023",
-        "SQLALCHEMY_DATABASE_URI": "postgresql://postgres:dataknown1234@192.168.100.152:36021/dataknown",
+        "PROXY_SERVER_URL": "http://192.168.1.152:36023",
+        "SQLALCHEMY_DATABASE_URI": "postgresql://dataknown:dataknown1234@127.0.0.1:5432/dataknown",
         "REDIS_URL": "redis://:dataknown1234@192.168.100.152:36061",
         "CHECK_API": "True"
-      }
-    },
-    {
-      "name": "test_150",
-      "type": "python",
-      "request": "launch",
-      "cwd": "${workspaceFolder}",
-      "program": "run.py",
-      "env": {
-        "RUN_PORT": "34502",
-        "FLASK_CONFIG": "testing",
-        "PROXY_SERVER_URL": "http://192.168.100.150:31102",
-        "SQLALCHEMY_DATABASE_URI": "postgresql://dataknown:7F8rouXrhvsibr@192.168.100.150:33314/dataknown",
-        "REDIS_URL": "redis://:dataknown1234@192.168.100.150:31063",
-        "CHECK_API": "True"
-      }
+      },
+      "justMyCode": false
     }
   ]
 }
