删除无用数据

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "dev_local",
+      "name": "dev",
       "type": "python",
       "request": "launch",
       "cwd": "${workspaceFolder}",
@@ -11,7 +11,7 @@
         "RUN_PORT": "34502",
         "FLASK_CONFIG": "development",
         "CHECK_PASSWORD": "False",
-        "PROXY_SERVER_URL": "http://192.168.1.152:36023",
+        "PROXY_SERVER_URL": "http://192.168.100.152:36023",
         "SQLALCHEMY_DATABASE_URI": "postgresql://dataknown:dataknown1234@127.0.0.1:5432/dataknown",
         "REDIS_URL": "redis://:dataknown1234@192.168.100.152:36061",
         "CHECK_API": "True"
