--- a/.drone.yml
+++ b/.drone.yml
@@ -11,6 +11,10 @@ steps:
         - latest
         - ${DRONE_BRANCH}
       dockerfile: Dockerfile
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
     when:
       branch:
         include: [master]  # 只在 master 分支上运行
@@ -21,7 +25,7 @@ steps:
         path: /var/run/docker.sock
 
   - name: publish_tag
-  
+
     image: plugins/docker
     settings:
       repo: wuhanchu/user_auth
@@ -29,6 +33,10 @@ steps:
         - latest
         - ${DRONE_TAG}
       dockerfile: Dockerfile
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
     when:
       branch:
         include: [master]  # 只在 master 分支上运行
