--- a/.drone.yml
+++ b/.drone.yml
@@ -20,9 +20,6 @@ steps:
         include: [master] # 只在 master 分支上运行
       event:
         include: [push] # 只包括 push 事件
-    volumes:
-      - name: dockersock
-        path: /var/run/docker.sock
 
   - name: publish_tag
     image: plugins/docker
@@ -41,9 +38,6 @@ steps:
         include: [master] # 只在 master 分支上运行
       event:
         include: [tag] # 只包括 tag 事件
-    volumes:
-      - name: dockersock
-        path: /var/run/docker.sock
 
   - name: deploy
     image: appleboy/drone-ssh
@@ -54,10 +48,13 @@ steps:
         from_secret: deploy_port
       username:
         from_secret: deploy_username
-      key_path: /root/.ssh/id_rsa
+      key:
+        from_secret: deploy_key
       script:
         - cd /home/wuhanchu/project/maintenance_script
         - ./script/check_clash.sh
-    volumes:
-      - name: key_file
-        path: /root/.ssh/id_rsa
+
+volumes:
+  - name: dockersock
+    host:
+      path: /var/run/docker.sock
